--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,4 +4,5 @@ runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-apiBaseUrl = http://localhost:8002
+crystalCOPApiBaseUrl = http://localhost:8002
+mizpaApiBaseUrl = http://localhost:8003
