--- a/conf/app.conf
+++ b/conf/app.conf
@@ -6,3 +6,4 @@ copyrequestbody = true
 EnableDocs = true
 crystalCOPApiBaseUrl = http://localhost:8002
 mizpaApiBaseUrl = http://localhost:8003
+mizpaSusuApiBaseUrl = http://localhost:8004
