--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,3 +7,4 @@ EnableDocs = true
 crystalCOPApiBaseUrl = http://localhost:8002
 mizpaApiBaseUrl = http://localhost:8003
 mizpaSusuApiBaseUrl = http://localhost:8004
+secureApiBaseUrl = http://localhost:8005
