--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,3 +8,4 @@ crystalCOPApiBaseUrl = http://localhost:8002
 mizpaApiBaseUrl = http://localhost:8003
 mizpaSusuApiBaseUrl = http://localhost:8004
 secureApiBaseUrl = http://localhost:8005
+JONApiBaseUrl = http://localhost:8006
