st margaret addition

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,3 +9,4 @@ mizpaApiBaseUrl = http://localhost:8003
 mizpaSusuApiBaseUrl = http://localhost:8004
 secureApiBaseUrl = http://localhost:8005
 JONApiBaseUrl = http://localhost:8006
+StMargaretApiBaseUrl = http://localhost:8007
