--- a/conf/app.conf
+++ b/conf/app.conf
@@ -10,3 +10,4 @@ mizpaSusuApiBaseUrl = http://localhost:8004
 secureApiBaseUrl = http://localhost:8005
 JONApiBaseUrl = http://localhost:8006
 StMargaretApiBaseUrl = http://localhost:8007
+AkuapemApiBaseUrl = http://localhost:8008
