--- a/conf/app.conf
+++ b/conf/app.conf
@@ -11,3 +11,4 @@ secureApiBaseUrl = http://localhost:8005
 JONApiBaseUrl = http://localhost:8006
 StMargaretApiBaseUrl = http://localhost:8007
 AkuapemApiBaseUrl = http://localhost:8008
+TrueLifeApiBaseUrl = http://localhost:8009
