--- a/conf/app.conf
+++ b/conf/app.conf
@@ -12,3 +12,4 @@ JONApiBaseUrl = http://localhost:8006
 StMargaretApiBaseUrl = http://localhost:8007
 AkuapemApiBaseUrl = http://localhost:8008
 TrueLifeApiBaseUrl = http://localhost:8009
+TwedieCommunityCoopApiBaseUrl = http://localhost:8010
