--- a/conf/app.conf
+++ b/conf/app.conf
@@ -13,3 +13,5 @@ StMargaretApiBaseUrl = http://localhost:8007
 AkuapemApiBaseUrl = http://localhost:8008
 TrueLifeApiBaseUrl = http://localhost:8009
 TwedieCommunityCoopApiBaseUrl = http://localhost:8010
+KwanwomaCoopApiBaseUrl = http://localhost:8011
+FAKACoopCreditUnionApiBaseUrl = http://localhost:8012
