--- a/conf/app.conf
+++ b/conf/app.conf
@@ -15,3 +15,4 @@ TrueLifeApiBaseUrl = http://localhost:8009
 TwedieCommunityCoopApiBaseUrl = http://localhost:8010
 KwanwomaCoopApiBaseUrl = http://localhost:8011
 FAKACoopCreditUnionApiBaseUrl = http://localhost:8012
+ZionPraiseHospitalCoopApiBaseUrl = http://localhost:8013
