--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,6 +4,8 @@ runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
+# sqlconn = root:password@tcp(127.0.0.1:3306)/msys_api_gateway_db
+sqlconn = msys:Msys@24gh@tcp(127.0.0.1:3306)/msys_api_gateway_db
 crystalCOPApiBaseUrl = http://localhost:8002
 mizpaApiBaseUrl = http://localhost:8003
 mizpaSusuApiBaseUrl = http://localhost:8004
