--- a/conf/app.conf
+++ b/conf/app.conf
@@ -18,3 +18,4 @@ TwedieCommunityCoopApiBaseUrl = http://localhost:8010
 KwanwomaCoopApiBaseUrl = http://localhost:8011
 FAKACoopCreditUnionApiBaseUrl = http://localhost:8012
 ZionPraiseHospitalCoopApiBaseUrl = http://localhost:8013
+MsysMicrofinanceApiBaseUrl = http://localhost:9009
