--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         sshpass -p "$SSH_PASSWORD" ssh -o StrictHostKeyChecking=no root@185.211.5.90 "
           cd /usr/app/msys_mobilization_gateway/ && \
+          git stash && \
           git pull https://$GIT_USERNAME:$GIT_PASSWORD@github.com/7erminal/msys_mobilization_gateway.git && \
           pm2 restart api
         "
