--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,8 +4,8 @@ runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-# sqlconn = root:password@tcp(127.0.0.1:3306)/msys_api_gateway_db
-sqlconn = msys:Msys@24gh@tcp(127.0.0.1:3306)/msys_api_gateway_db
+sqlconn = root:password@tcp(127.0.0.1:3306)/msys_api_gateway_db
+# sqlconn = msys:Msys@24gh@tcp(127.0.0.1:3306)/msys_api_gateway_db
 crystalCOPApiBaseUrl = http://localhost:8002
 mizpaApiBaseUrl = http://localhost:8003
 mizpaSusuApiBaseUrl = http://localhost:8004
@@ -18,5 +18,5 @@ TwedieCommunityCoopApiBaseUrl = http://localhost:8010
 KwanwomaCoopApiBaseUrl = http://localhost:8011
 FAKACoopCreditUnionApiBaseUrl = http://localhost:8012
 ZionPraiseHospitalCoopApiBaseUrl = http://localhost:8013
-MsysMicrofinanceApiBaseUrl = http://localhost:9009
-# MsysMicrofinanceApiBaseUrl = http://localhost:8000
+# MsysMicrofinanceApiBaseUrl = http://localhost:9009
+MsysMicrofinanceApiBaseUrl = http://localhost:8000
